--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,11 @@
         <version>1.2.3</version>
     </dependency>
     <dependency>
+        <groupId>ch.qos.logback</groupId>
+        <artifactId>logback-access</artifactId>
+        <version>1.2.3</version>
+    </dependency>
+    <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>4.11</version>
