--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -29,3 +29,10 @@ jobs:
         cache: maven
     - name: Build with Maven
       run: mvn -B package --file pom.xml
+
+    - name: Archive production artifacts
+      uses: actions/upload-artifact@v2
+      with:
+        name: compiled-application
+        path: |
+          target/*
