--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -31,8 +31,8 @@ jobs:
       run: mvn -B package --file pom.xml
 
     - name: Archive production artifacts
-      uses: actions/upload-artifact@v2
+      uses: actions/upload-artifact@v4
       with:
-        name: compiled-application
+        name: OrderSystem
         path: |
           target/*
