--- a/src/main/resources/database.properties
+++ b/src/main/resources/database.properties
@@ -1,4 +1,4 @@
 jdbc.driver = com.mysql.jdbc.Driver
-jdbc.url = jdbc:mysql://172.24.65.91:3306/order_system?useUnicode=true&characterEncoding=utf-8
+jdbc.url = jdbc:mysql://localhost:3306/order
 jdbc.username = root
-jdbc.password = 427515
+jdbc.password = 123456
